adding ecr loging

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,8 @@ jobs:
       - deploy:
           name: Push application Docker image
           command: |
-            aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_ENDPOINT}
+            login="$(aws ecr get-login-password --region ${AWS_REGION})"
+            $login | docker login --username AWS --password-stdin ${ECR_ENDPOINT
             docker tag app "${ECR_ENDPOINT}/${CIRCLE_BRANCH}/app:${CIRCLE_SHA1}"
             docker push "${ECR_ENDPOINT}/${CIRCLE_BRANCH}/app:${CIRCLE_SHA1}"
   lint:
