--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           name: Push application Docker image
           command: |
             aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_ENDPOINT}
-            docker tag app:latest "${ECR_ENDPOINT}app:${CIRCLE_SHA1}"
+            docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
             docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
   lint:
     docker:
