--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,10 +84,16 @@ jobs:
         description: |
           Name of the EKS cluster
         type: string
+      aws-region:
+        default: 'us-east-1'
+        description: |
+          AWS region that the EKS cluster will be created in.
+        type: string
     steps:
       - kubernetes/install
       - aws-eks/update-kubeconfig-with-authenticator:
           cluster-name: << parameters.cluster-name >>
+          aws-region: << parameters.aws-region >>
       - run:
           command: |
             kubectl -n web get all
