--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,6 +98,38 @@ jobs:
           command: |
             kubectl -n web get all
           name: Test cluster
+  update-deployment:
+    docker:
+      - image: python:3.7.3-stretch
+    parameters:
+      cluster-name:
+        description: |
+          Name of the EKS cluster
+        type: string
+      aws-region:
+        default: 'us-east-1'
+        description: |
+          AWS region that the EKS cluster will be created in.
+        type: string
+    steps:
+      - kubernetes/install
+      - aws-eks/update-kubeconfig-with-authenticator:
+          cluster-name: << parameters.cluster-name >>
+          aws-region: << parameters.aws-region >>
+      - run:
+          command: |
+            kubectl -n web get all
+          name: Test cluster
+      - run:
+          name: Install dependencies
+          command: |
+            wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY} -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
+      - run:
+          name: deploy artifacts
+          command: |
+            yq e -i '.spec.template.spec.containers[0].image = "${ECR_ENDPOINT}/capstone:${CIRCLE_SHA1}"' src/deployment.yaml
+            kubectl apply -f src/ns.yml -f src/deployment.yaml -f src/service.yml
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -110,3 +142,5 @@ workflows:
             - lint
       - test-cluster:
           cluster-name: capstone-eks-cluster
+          requires:
+            - build
