adding update-deployment stage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,3 +144,6 @@ workflows:
           cluster-name: capstone-eks-cluster
           requires:
             - build
+      - update-deployment:
+          requires:
+            - test-cluster
