--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,9 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CC86BB64
+            add-apt-repository ppa:rmescandon/yq
+            apt update
             apt-get install yq -y
       - run:
           name: deploy artifacts
