--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,10 +123,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apt-key adv --keyserver keyserver.ubuntu.com --recv-keys CC86BB64
-            add-apt-repository ppa:rmescandon/yq
-            apt update
-            apt-get install yq -y
+            VERSION="v4.16.2"
+            BINARY="yq_linux_amd64.tar.gz"
+            wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY} -O /usr/bin/yq &&\
+            chmod +x /usr/bin/yq
       - run:
           name: deploy artifacts
           command: |
