--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,4 +149,4 @@ workflows:
       - update-deployment:
           cluster-name: capstone-eks-cluster
           requires:
-            - test-cluster
+            - build
