--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,7 @@ jobs:
           name: Install dependencies
           command: |
             VERSION="v4.16.2"
-            BINARY="yq_linux_amd64.tar.gz"
+            BINARY="yq_linux_386.tar.gz"
             wget https://github.com/mikefarah/yq/releases/download/${VERSION}/${BINARY} -O /usr/bin/yq &&\
             chmod +x /usr/bin/yq
       - run:
