--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,7 +131,8 @@ jobs:
       - run:
           name: deploy artifacts
           command: |
-            image="$ECR_ENDPOINT/capstone:$CIRCLE_SHA1" yq e -i '.spec.template.spec.containers[0].image = env(image)' src/deployment.yaml
+            IMAGE=$ECR_ENDPOINT/capstone:$CIRCLE_SHA1
+            yq e -i '.spec.template.spec.containers[0].image = env(IMAGE)' src/deployment.yaml
             kubectl apply -f src/ns.yml -f src/deployment.yaml -f src/service.yml
 
 # Invoke jobs via workflows
